apps/media/heimdall/resources/virtualservice.yaml
# VirtualService routes traffic from Gateway to Heimdall
# Accessible at https://heimdall.localhost:8443
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: heimdall
  namespace: media
spec:
  hosts:
    - "heimdall.localhost"
  gateways:
    - istio-ingress/main-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: heimdall.media.svc.cluster.local
            port:
              number: 80
